# sns-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: config.example.yaml  config.schema.json
docker/: Dockerfile  docker-compose.yml
docs/: ADDING_A_PARSER.md  ADDING_A_TOOL.md  CONFIGURATION.md
src/sns_mcp/: __init__.py  logging_config.py  server.py  server_http.py  wizard.py
src/sns_mcp/capabilities/: __init__.py  probe.py  registry.py
src/sns_mcp/client/: command_executor.py  device_manager.py  sns_client.py
src/sns_mcp/config/: __init__.py  loader.py  models.py
src/sns_mcp/formatters/: __init__.py  output.py
src/sns_mcp/parsers/: base.py  logs.py
src/sns_mcp/tools/: interfaces.py  logs.py  objects.py  policy.py  vpn.py
src/stormshield_mcp/: __init__.py  logging_config.py  server.py  server_http.py  wizard.py
src/stormshield_mcp/capabilities/: probe.py  registry.py
src/stormshield_mcp/client/: __init__.py  command_executor.py  device_manager.py  sns_client.py
src/stormshield_mcp/config/: models.py
src/stormshield_mcp/formatters/: output.py
src/stormshield_mcp/parsers/: __init__.py  (+7 more)
tests/: conftest.py
tests/fixtures/: filter_show_empty.txt  filter_show_sns4.txt  filter_show_sns5.txt  interface_show.txt  monitor_stat.txt  nat_show_sns4.txt  object_show_hosts.txt  object_show_networks.txt  route_show.txt  service_show.txt  system_ha_active.txt  system_licenses.txt  system_property.txt  vpn_ipsec_config.txt  vpn_ipsec_sa.txt
tests/integration/: test_integration.py
tests/unit/: test_capabilities.py  test_config.py  test_parsers.py  test_tools.py
(+3 files in other folders)
